# BazelPods

./: .bazelrc  .gitattributes  .gitignore  .swiftlint.yml  BUILD  BUILD.bazel  Gemfile  MODULE.bazel  Makefile  README.md  WORKSPACE  renovate.json  repositories.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: integration_tests_dynamic.yml  integration_tests_static.yml  release.yml  renovate_config.js  renovatebot.yml  snapshot_tests.yml  tests.yml
IntegrationTests/: BUILD_template  Podfile_template  TopPods.json  generate_pods.swift
IntegrationTests/TestApp_iOS/: AppDelegate.swift  Info.plist  ViewController.swift
IntegrationTests/TestApp_osx/: ContentView.swift  Info.plist  TestApp_macOSApp.swift
Sources/Analyzer/: RootCommand.swift
Sources/BazelPods/: Arm64sim.swift  BazelPods.swift  Compile.swift  Generate.swift  PodSpecification.swift
Sources/BazelPodsCore/: BuildFile.swift  GlobUtils.swift  PodSpec.swift  RuleUtils.swift
Sources/BazelPodsCore/Analyzer/: Analyzer.swift  BaseSpecAnalyzer.swift
Sources/BazelPodsCore/Core/: BuildOptions.swift  Magmas.swift  MultiPlatform.swift  UserOption.swift
Sources/BazelPodsCore/Extensions/: String+Path.swift  String+Version.swift
Sources/BazelPodsCore/Patches/: Arm64ToSimPatch.swift  BundlesDeduplicate.swift  Patch.swift  UserOptionsPatch.swift
Sources/BazelPodsCore/Shell/: LogicalShellContext.swift
Sources/BazelPodsCore/Targets/: AppleFramework.swift  AppleFrameworkImport.swift  AppleFrameworkPackaging.swift  AppleResourceBundle.swift  ConfigSetting.swift  ObjcImport.swift  ObjcLibrary.swift  TargetName.swift  iOSApplication.swift
Sources/BazelPodsCore/XCConfig/: XCConfigParser.swift  XCConfigSettingTransformer.swift  XCSpecs.swift
Sources/Compiler/: RootCommand.swift  main.swift
Sources/CompilerCore/: BuildFile.swift  BuildOptions.swift  GlobNode.swift  GlobNodeV2.swift  GlobUtils.swift  Parser.swift  RuleUtils.swift  StarlarkConvertibleTransform.swift  UserConfigurable.swift
Sources/CompilerCore/Analyzer/: Analyzer.swift
Sources/CompilerCore/Analyzers/: BaseAnalyzer.swift  BaseInfoAnalyzer.swift  PodDependenciesAnalyzer.swift  ResourcesAnalyzer.swift  SdkDependenciesAnalyzer.swift  SourcesAnalyzer.swift  VendoredDependenciesAnalyzer.swift
Sources/CompilerCore/Convertible/: XCFramework.swift
Sources/CompilerCore/Core/: BuildOptions.swift  GlobNode.swift  GlobNodeV2.swift  MultiPlatform.swift  UserOption.swift
Sources/CompilerCore/Extensions/: Array+Deduplicate.swift  Set+Map.swift  String+Error.swift  String+Version.swift
Sources/CompilerCore/Patches/: Arm64ToSimPatch.swift  BundlesDeduplicate.swift  Patch.swift  UserOptionsPatch.swift
Sources/CompilerCore/Shell/: ShellContext.swift
Sources/CompilerCore/Targets/: AppleBundleImport.swift  AppleFramework.swift  AppleFrameworkImport.swift  AppleFrameworkPackaging.swift  AppleLibrary.swift  AppleResourceBundle.swift  ConfigSetting.swift  ObjcLibrary.swift  TargetName.swift
Sources/CompilerCore/XCConfig/: XCConfigParser.swift
Sources/Generator/: PodConfig.swift  PodSpecification.swift  RootCommand.swift  main.swift
Sources/Logger/: Logger.swift
Sources/PodToBUILD/: BuildFile.swift  BuildOptions.swift  GlobNode.swift  GlobUtils.swift  PodSpec.swift  RuleUtils.swift  Skylark.swift  SkylarkConvertible.swift  SkylarkConvertibleTransform.swift  Starlark.swift  StarlarkConvertible.swift  UserConfigurable.swift
Sources/PodToBUILD/Convertible/: XCFramework.swift
Sources/PodToBUILD/Core/: Magmas.swift  MultiPlatform.swift
Sources/PodToBUILD/Extensions/: String+Error.swift  String+Path.swift
Sources/PodToBUILD/Shell/: ShellContext.swift
Sources/PodToBUILD/Targets/: AppleBundleImport.swift  AppleFramework.swift  AppleFrameworkImport.swift  AppleResourceBundle.swift  ConfigSetting.swift  ObjcImport.swift
Sources/PodToBUILD/XCConfig/: XCConfigParser.swift
Sources/Shared/: Logger.swift
TestTools/: BUILD_template  Podfile_template  Pods.json  Pods_Integration.json  TopPods.json  TopPods_Integration.json  generate_buildfile.swift  generate_podfile.swift
Tests/PodToBUILDTests/: BasicBuildOptionsTest.swift  BuildFileTests.swift  UserConfigurableTests.swift
Tests/Recorded/AAInfographics/: BUILD.bazel
Tests/Recorded/ADMobGenDeviceInfo/: BUILD.bazel
Tests/Recorded/ADMobGenFoundation/: BUILD.bazel
Tests/Recorded/ADMobGenNetwork/: BUILD.bazel
Tests/Recorded/ADSuyiKit/: BUILD.bazel
Tests/Recorded/ADSuyiNetwork/: BUILD.bazel
Tests/Recorded/AEXML/: BUILD.bazel
Tests/Recorded/AFNetworking/: BUILD.bazel
Tests/Recorded/AMPopTip/: BUILD.bazel
Tests/Recorded/AMScrollingNavbar/: BUILD.bazel
Tests/Recorded/APNGKit/: BUILD.bazel
Tests/Recorded/AWSAPIGateway/: BUILD.bazel
Tests/Recorded/AWSAppleSignIn/: BUILD.bazel
Tests/Recorded/AWSAuthCore/: BUILD.bazel
Tests/Recorded/AWSCore/: BUILD.bazel
Tests/Recorded/AcknowList/: BUILD.bazel
Tests/Recorded/Action/: BUILD.bazel
Tests/Recorded/AgoraAudio_iOS/: BUILD.bazel
Tests/Recorded/Antlr4/: BUILD.bazel
Tests/Recorded/Appboy-iOS-SDK/: BUILD.bazel
Tests/Recorded/BidstackMobileAdsSDK/: BUILD.bazel
Tests/Recorded/Bluepill/: BUILD.bazel
Tests/Recorded/CLOpenSSL-XCF/: BUILD.bazel
Tests/Recorded/Capacitor/: BUILD.bazel
Tests/Recorded/ChatLayout/: BUILD.bazel
Tests/Recorded/Cheetah-iOS/: BUILD.bazel
Tests/Recorded/CocoaLumberjack/: BUILD.bazel
Tests/Recorded/CoconutKit/: BUILD.bazel
Tests/Recorded/Connectivity/: BUILD.bazel
Tests/Recorded/CoreStore/: BUILD.bazel
Tests/Recorded/DSSwiftUIKit/: BUILD.bazel
Tests/Recorded/Delegate/: BUILD.bazel
Tests/Recorded/Eureka/: BUILD.bazel
Tests/Recorded/FBAEMKit/: BUILD.bazel
Tests/Recorded/FBMemoryProfiler/: BUILD.bazel
Tests/Recorded/FBRetainCycleDetector/: BUILD.bazel
Tests/Recorded/FBSDKCoreKit/: BUILD.bazel
Tests/Recorded/FBSDKCoreKit_Basics/: BUILD.bazel
Tests/Recorded/FBSDKMarketingKit/: BUILD.bazel
Tests/Recorded/FMDB/: BUILD.bazel
UnitTests/: BUILD
UnitTests/PodToBUILDTests/: SkylarkTests.swift
xcodeconfig/: xcodeconfig.sh
xcodeproj/: BUILD
(+402 files in other folders)
