load('@build_bazel_rules_ios//rules:apple_patched.bzl', 'apple_static_framework_import')
load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "ADMobGenNetwork",
  module_name = "ADMobGenNetwork",
  bundle_id = "org.cocoapods.ADMobGenNetwork",
  link_dynamic = False,
  testonly = False,
  platforms = {
    "ios": "10.0"
  },
  deps = select(
    {
      "//conditions:default": [],
      ":ios_arm64": [
        ":ADMobGenNetwork_ADMobGenNetwork_VendoredFramework"
      ],
      ":ios_armv7": [
        ":ADMobGenNetwork_ADMobGenNetwork_VendoredFramework"
      ],
      ":ios_i386": [
        ":ADMobGenNetwork_ADMobGenNetwork_VendoredFramework"
      ],
      ":ios_x86_64": [
        ":ADMobGenNetwork_ADMobGenNetwork_VendoredFramework"
      ]
    }
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "CFNetwork"
  ],
  linkopts = [
    "-ObjC"
  ],
  visibility = [
    "//visibility:public"
  ]
)
apple_static_framework_import(
  name = "ADMobGenNetwork_ADMobGenNetwork_VendoredFramework",
  framework_imports = glob(
    [
      "ADMobGenNetwork/Classes/ADMobGenNetwork.framework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)