load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
apple_framework(
  name = "AWSAppleSignIn",
  module_name = "AWSAppleSignIn",
  bundle_id = "org.cocoapods.AWSAppleSignIn",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":AWSAppleSignIn_InfoPlist"
  ],
  platforms = {
    "ios": "13.0"
  },
  srcs = glob(
    [
      "AWSAuthSDK/Sources/AWSAppleSignIn/*.h",
      "AWSAuthSDK/Sources/AWSAppleSignIn/*.m"
    ]
  ),
  public_headers = glob(
    [
      "AWSAuthSDK/Sources/AWSAppleSignIn/*.h"
    ]
  ),
  deps = [
    "//Tests/Pods/AWSAuthCore:AWSAuthCore",
    "//Tests/Pods/AWSCore:AWSCore"
  ],
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "AuthenticationServices"
  ],
  visibility = [
    "//visibility:public"
  ]
)
genrule(
  name = "AWSAppleSignIn_InfoPlist",
  srcs = [],
  outs = [
    "AWSAppleSignIn_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.AWSAppleSignIn</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>AWSAppleSignIn</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>2.33.8</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>13.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)