load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
load('@build_bazel_rules_ios//rules:precompiled_apple_resource_bundle.bzl', 'precompiled_apple_resource_bundle')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
apple_framework(
  name = "AcknowList",
  module_name = "AcknowList",
  bundle_id = "org.cocoapods.AcknowList",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":AcknowList_InfoPlist"
  ],
  platforms = {
    "ios": "13.0"
  },
  srcs = glob(
    [
      "Sources/AcknowList/*.swift"
    ]
  ),
  deps = [
    ":AcknowList_AcknowListBundle_Bundle"
  ],
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "SafariServices",
    "SwiftUI"
  ],
  visibility = [
    "//visibility:public"
  ]
)
precompiled_apple_resource_bundle(
  name = "AcknowList_AcknowListBundle_Bundle",
  bundle_id = "org.cocoapods.AcknowListBundle",
  bundle_name = "AcknowListBundle",
  infoplists = [
    ":AcknowList_AcknowListBundle_Bundle_InfoPlist"
  ],
  resources = glob(
    [
      "Sources/AcknowList/Resources/**/*.lproj"
    ]
  )
)
genrule(
  name = "AcknowList_InfoPlist",
  srcs = [],
  outs = [
    "AcknowList_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.AcknowList</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>AcknowList</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>3.1.0</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>13.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)
genrule(
  name = "AcknowList_AcknowListBundle_Bundle_InfoPlist",
  srcs = [],
  outs = [
    "AcknowList_AcknowListBundle_Bundle_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.AcknowListBundle</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>AcknowListBundle</string>
	<key>CFBundlePackageType</key>
	<string>BNDL</string>
	<key>CFBundleShortVersionString</key>
	<string>3.1.0</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>13.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)