load('@build_bazel_rules_apple//apple:apple.bzl', 'apple_dynamic_xcframework_import')
load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "osxCase",
  values = {
    "apple_platform_type": "macos"
  }
)
config_setting(
  name = "tvosCase",
  values = {
    "apple_platform_type": "tvos"
  }
)
config_setting(
  name = "watchosCase",
  values = {
    "apple_platform_type": "watchos"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_arm64e",
  values = {
    "cpu": "ios_arm64e"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "AgoraAudio_iOS",
  module_name = "AgoraAudio_iOS",
  bundle_id = "org.cocoapods.AgoraAudio_iOS",
  link_dynamic = False,
  testonly = False,
  platforms = {
    "ios": "10.0"
  },
  deps = select(
    {
      "//conditions:default": [],
      ":ios_arm64": [
        ":AgoraAudio_iOS_AgoraAiEchoCancellationExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAiNoiseSuppressionExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAudioBeautyExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraDrmLoaderExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraRtcKit_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSoundTouch_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSpatialAudioExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_Agorafdkaac_VendoredXCFramework"
      ],
      ":ios_armv7": [
        ":AgoraAudio_iOS_AgoraAiEchoCancellationExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAiNoiseSuppressionExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAudioBeautyExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraDrmLoaderExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraRtcKit_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSoundTouch_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSpatialAudioExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_Agorafdkaac_VendoredXCFramework"
      ],
      ":ios_sim_arm64": [
        ":AgoraAudio_iOS_AgoraAiEchoCancellationExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAiNoiseSuppressionExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAudioBeautyExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraDrmLoaderExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraRtcKit_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSoundTouch_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSpatialAudioExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_Agorafdkaac_VendoredXCFramework"
      ],
      ":ios_x86_64": [
        ":AgoraAudio_iOS_AgoraAiEchoCancellationExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAiNoiseSuppressionExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraAudioBeautyExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraDrmLoaderExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraRtcKit_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSoundTouch_VendoredXCFramework",
        ":AgoraAudio_iOS_AgoraSpatialAudioExtension_VendoredXCFramework",
        ":AgoraAudio_iOS_Agorafdkaac_VendoredXCFramework"
      ]
    }
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraAiEchoCancellationExtension_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraAiEchoCancellationExtension.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraAiNoiseSuppressionExtension_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraAiNoiseSuppressionExtension.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraAudioBeautyExtension_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraAudioBeautyExtension.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraDrmLoaderExtension_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraDrmLoaderExtension.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraRtcKit_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraRtcKit.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraSoundTouch_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraSoundTouch.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_AgoraSpatialAudioExtension_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "AgoraSpatialAudioExtension.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "AgoraAudio_iOS_Agorafdkaac_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "Agorafdkaac.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)