load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
apple_framework(
  name = "Antlr4",
  module_name = "Antlr4",
  bundle_id = "org.cocoapods.Antlr4",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":Antlr4_InfoPlist"
  ],
  platforms = {
    "ios": "12.0"
  },
  srcs = glob(
    [
      "runtime/Swift/Sources/Antlr4/**/*.S",
      "runtime/Swift/Sources/Antlr4/**/*.c",
      "runtime/Swift/Sources/Antlr4/**/*.cc",
      "runtime/Swift/Sources/Antlr4/**/*.cpp",
      "runtime/Swift/Sources/Antlr4/**/*.cxx",
      "runtime/Swift/Sources/Antlr4/**/*.h",
      "runtime/Swift/Sources/Antlr4/**/*.hpp",
      "runtime/Swift/Sources/Antlr4/**/*.hxx",
      "runtime/Swift/Sources/Antlr4/**/*.m",
      "runtime/Swift/Sources/Antlr4/**/*.mm",
      "runtime/Swift/Sources/Antlr4/**/*.s",
      "runtime/Swift/Sources/Antlr4/**/*.swift"
    ]
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)
genrule(
  name = "Antlr4_InfoPlist",
  srcs = [],
  outs = [
    "Antlr4_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.Antlr4</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>Antlr4</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>4.13.1</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>12.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)